--- a/style.css
+++ b/style.css
@@ -152,7 +152,8 @@ main {
   background-image: url(img/baixados.jpg);
   background-repeat: no-repeat;
   background-size: 100%;
-  opacity: 0.9; /* deixa o footer todo meio transparente */
+  opacity: 0.9;
+  /* deixa o footer todo meio transparente */
   box-shadow: -1px -1px 73px -7px rgba(66, 126, 255, 0.75);
   border-radius: 10px
 }
@@ -163,6 +164,7 @@ main {
   display: flex;
   justify-content: center;
 }
+
 .info {
   width: 35%;
   height: auto;
@@ -211,6 +213,7 @@ h3:hover {
   from {
     opacity: 0;
   }
+
   to {
     opacity: 1;
   }
@@ -251,7 +254,7 @@ h3:hover {
     height: 150%;
   }
 
-   .paicont {
+  .paicont {
     box-shadow: 0px 0px 22px -2px rgba(255, 255, 255, 1);
     height: 98%;
     flex-direction: column;
@@ -291,7 +294,7 @@ h3:hover {
     height: 150%;
   }
 
-   .paicont {
+  .paicont {
     box-shadow: 0px 0px 22px -2px rgba(255, 255, 255, 1);
     height: 98%;
     flex-direction: column;
@@ -324,7 +327,8 @@ h3:hover {
   }
 
   main {
-    height: 70dvh;
+    margin-top: 100%;
+    height: 50dvh;
   }
 
   .titulo {
@@ -351,7 +355,7 @@ h3:hover {
   }
 
   .carousel-item {
-    height: 500px;
+    height: 250px;
   }
 
   .paicont {
@@ -364,13 +368,6 @@ h3:hover {
   .info {
     width: 80%;
   }
-
-  .card1 {
-    width: 90%;
-    height: auto;
-    padding: 15px;
-    opacity: 1; /* sempre visível no mobile */
-  }
 }
 
 @media (max-width: 500px) {
@@ -378,6 +375,10 @@ h3:hover {
   h1 {
     font-size: 30px;
     margin-top: 8px;
+  }
+
+  main {
+    height: 50dvh;
   }
 
   .titulo {
@@ -404,7 +405,7 @@ h3:hover {
   }
 
   .carousel-item {
-    height: 250px;
+    height: 500px;
   }
 
   .paicont {
